[package]
name = "tokio-io-timeout"
version = "0.4.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Tokio wrappers which apply timeouts to IO operations"
repository = "https://github.com/sfackler/tokio-io-timeout"
readme = "README.md"
edition = "2018"

[dependencies]
bytes = "0.5"
tokio = { version = "0.2", features = ["time"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
