[package]
name = "tokio-io-timeout"
version = "0.5.0"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Tokio wrappers which apply timeouts to IO operations"
repository = "https://github.com/sfackler/tokio-io-timeout"
readme = "README.md"
edition = "2018"

[dependencies]
pin-project = "1.0"
tokio = { version = "1.0", features = ["time"] }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
