[package]
name = "tokio-io-timeout"
version = "1.2.1"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Tokio wrappers which apply timeouts to IO operations"
repository = "https://github.com/sfackler/tokio-io-timeout"
readme = "README.md"
edition = "2018"

[dependencies]
pin-project-lite = "0.2"
tokio = { version = "1.0", features = ["time"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
